<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >

  <LinearLayout android:id="@+id/button_bar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    >
    <Button android:id="@+id/splash_button_ringtone"
      android:text="@string/splash_button_label_ringtone"
      android:layout_width="0dip" 
      android:layout_height="wrap_content" 
      android:layout_weight="1"
      />
    <Button android:id="@+id/splash_button_notification"
      android:text="@string/splash_button_label_notification"
      android:layout_width="0dip" 
      android:layout_height="wrap_content" 
      android:layout_weight="1"
      />
  </LinearLayout>

<!--
  <Button android:id="@+id/splash_button_ok"
    android:text="@android:string/ok"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    />
    -->

  <ScrollView  
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:layout_above="@id/button_bar"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    >

    <LinearLayout android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      >
    <SeekBar android:id="@+id/volume_ringer"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
    <TextView android:id="@+id/volume_text_ringer"
      android:layout_width="fill_parent" android:layout_height="wrap_content"
      android:text="@string/volume_ringer"
      android:gravity="center"
      android:paddingBottom="12sp"
      />

    <SeekBar android:id="@+id/volume_music"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
    <TextView android:id="@+id/volume_text_music"
      android:layout_width="fill_parent" android:layout_height="wrap_content"
      android:text="@string/volume_music"
      android:gravity="center"
      android:paddingBottom="12sp"
      />

    <SeekBar android:id="@+id/volume_call"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
    <TextView android:id="@+id/volume_text_call"
      android:layout_width="fill_parent" android:layout_height="wrap_content"
      android:text="@string/volume_call"
      android:gravity="center"
      android:paddingBottom="12sp"
      />

    <SeekBar android:id="@+id/volume_system"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
    <TextView android:id="@+id/volume_text_system"
      android:layout_width="fill_parent" android:layout_height="wrap_content"
      android:text="@string/volume_system"
      android:gravity="center"
      android:paddingBottom="12sp"
      />

    <SeekBar android:id="@+id/volume_alarm"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
    <TextView android:id="@+id/volume_text_alarm"
      android:layout_width="fill_parent" android:layout_height="wrap_content"
      android:text="@string/volume_alarm"
      android:gravity="center"
      />
    </LinearLayout>
  </ScrollView>
</RelativeLayout>
